Modernized build settings.
Used latest compileSdkVersion, buildToolsVersion
Added ignored dynamic version warnings on demo app.

--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -8,12 +8,13 @@ repositories {
 
 dependencies {
     debugCompile project(':richedit')
+    //noinspection GradleDynamicVersion
     releaseCompile 'com.commonsware.cwac:richedit:0.3.+'
 }
 
 android {
-    compileSdkVersion 17
-    buildToolsVersion "19.1.0"
+    compileSdkVersion 21
+    buildToolsVersion "21.1.2"
 
     sourceSets {
         main {
