--- a/demo/AndroidManifest.xml
+++ b/demo/AndroidManifest.xml
@@ -6,11 +6,12 @@
 
 	<uses-sdk
 		android:minSdkVersion="14"
-		android:targetSdkVersion="19"/>
+		android:targetSdkVersion="21"/>
 
 	<application
 		android:icon="@drawable/ic_launcher"
 		android:label="@string/app_name"
+		android:allowBackup="false"
 		android:theme="@android:style/Theme.Holo.Light.DarkActionBar">
 		<activity
 			android:name=".RichTextEditorDemoActivity"
