--- a/demo/AndroidManifest.xml
+++ b/demo/AndroidManifest.xml
@@ -7,6 +7,7 @@
 	<uses-sdk
 		android:minSdkVersion="14"
 		android:targetSdkVersion="21"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
 	<application
 		android:icon="@drawable/ic_launcher"
@@ -15,7 +16,8 @@
 		android:theme="@android:style/Theme.Holo.Light.DarkActionBar">
 		<activity
 			android:name=".RichTextEditorDemoActivity"
-			android:label="@string/app_name">
+			android:label="@string/app_name"
+			android:windowSoftInputMode="adjustResize">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN"/>
 
