--- a/richedit/build.gradle
+++ b/richedit/build.gradle
@@ -36,14 +36,14 @@ android.libraryVariants.all { variant ->
 }
 
 apply plugin: 'maven'
- 
-//uploadArchives {
-//    repositories.mavenDeployer {
-//        pom.groupId = PUBLISH_GROUP_ID
-//        pom.artifactId = PUBLISH_ARTIFACT_ID
-//        pom.version = PUBLISH_VERSION
-//
-//        repository(url: LOCAL_REPO)
-//    }
-//}
 
+uploadArchives {
+    repositories.mavenDeployer {
+        pom.groupId = PUBLISH_GROUP_ID
+        pom.artifactId = PUBLISH_ARTIFACT_ID
+        pom.version = PUBLISH_VERSION
+
+        repository(url: REPOSITORY_URL)
+        snapshotRepository(url: SNAPSHOT_REPOSITORY_URL)
+    }
+}
